--- a/labs/lab1/bootstrap/index.html
+++ b/labs/lab1/bootstrap/index.html
@@ -192,6 +192,8 @@
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
     </ol>
 
     <!-- Wrapper for slides -->
@@ -217,6 +219,22 @@
         <div class="carousel-caption">
           <h3>LA</h3>
           <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p>
+        </div>      
+      </div>
+      
+      <div class="item">
+        <img src="miami.jpg" alt="Los Angeles" width="1200" height="700">
+        <div class="carousel-caption">
+          <h3>Miami</h3>
+          <p>Beautiful, but so many homeless people!</p>
+        </div>      
+      </div>
+      
+      <div class="item">
+        <img src="denver.jpg" alt="Denver" width="1200" height="700">
+        <div class="carousel-caption">
+          <h3>Denver</h3>
+          <p>Smoke... everyday!</p>
         </div>      
       </div>
     </div>
