--- a/labs/lab1/bootstrap/index.html
+++ b/labs/lab1/bootstrap/index.html
@@ -257,7 +257,7 @@
   <p>We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   <br>
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <p class="text-center"><strong>Name</strong></p><br>
       <a href="#demo" data-toggle="collapse">
         <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
@@ -268,7 +268,7 @@
         <p>Member since 1988</p>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <p class="text-center"><strong>Name</strong></p><br>
       <a href="#demo2" data-toggle="collapse">
         <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
@@ -279,7 +279,7 @@
         <p>Member since 1988</p>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <p class="text-center"><strong>Name</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
         <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
@@ -288,6 +288,17 @@
         <p>Bass player</p>
         <p>Loves math</p>
         <p>Member since 2005</p>
+      </div>
+    </div>
+    <div class="col-sm-3">
+      <p class="text-center"><strong>Name</strong></p><br>
+      <a href="#demo4" data-toggle="collapse">
+        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+      </a>
+      <div id="demo4" class="collapse">
+        <p>Rapper</p>
+        <p>Living the high life</p>
+        <p>Member since 1420</p>
       </div>
     </div>
   </div>
