Added crew member photos

--- a/labs/lab1/bootstrap/index.html
+++ b/labs/lab1/bootstrap/index.html
@@ -260,7 +260,7 @@
     <div class="col-sm-3">
       <p class="text-center"><strong>Name</strong></p><br>
       <a href="#demo" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="guitar.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo" class="collapse">
         <p>Guitarist and Lead Vocalist</p>
@@ -271,7 +271,7 @@
     <div class="col-sm-3">
       <p class="text-center"><strong>Name</strong></p><br>
       <a href="#demo2" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="drummer.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo2" class="collapse">
         <p>Drummer</p>
@@ -282,7 +282,7 @@
     <div class="col-sm-3">
       <p class="text-center"><strong>Name</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="bass.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo3" class="collapse">
         <p>Bass player</p>
@@ -293,7 +293,7 @@
     <div class="col-sm-3">
       <p class="text-center"><strong>Name</strong></p><br>
       <a href="#demo4" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="lilpump.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo4" class="collapse">
         <p>Rapper</p>
