Added new tab for lil pump

--- a/labs/lab1/bootstrap/index.html
+++ b/labs/lab1/bootstrap/index.html
@@ -408,6 +408,7 @@
     <li class="active"><a data-toggle="tab" href="#home">Mike</a></li>
     <li><a data-toggle="tab" href="#menu1">Chandler</a></li>
     <li><a data-toggle="tab" href="#menu2">Peter</a></li>
+    <li><a data-toggle="tab" href="#menu3">Lil Pump</a></li>
   </ul>
 
   <div class="tab-content">
@@ -422,6 +423,10 @@
     <div id="menu2" class="tab-pane fade">
       <h2>Peter Griffin, Bass player</h2>
       <p>I mean, sometimes I enjoy the show, but other times I enjoy other things.</p>
+    </div>
+    <div id="menu3" class="tab-pane fade">
+      <h2>Lil Pump, Rapper</h2>
+      <p>I smoke everyday.</p>
     </div>
   </div>
 </div>
