--- a/projects/p1/index.html
+++ b/projects/p1/index.html
@@ -82,7 +82,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/printer.jpg" alt="First slide" style="width:100%; max-height:600px; min-heigh:600px">
+            <img class="d-block w-100" src="projects/p1/img/printer.jpg" alt="First slide" style="width:100%; max-height:600px; min-heigh:600px">
             <div class="carousel-caption d-none d-md-block">
               <h3>Lorem Ipsum</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus.</p>
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/ink.jpg" alt="Third slide" style="width:100%; max-height:600px; min-heigh:600px">
+            <img class="d-block w-100" src="projects/p1/img/ink.jpg" alt="Third slide" style="width:100%; max-height:600px; min-heigh:600px">
             <div class="carousel-caption d-none d-md-block">
               <h3>Lorem Ipsum</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus.</p>
