--- a/projects/p1/index.html
+++ b/projects/p1/index.html
@@ -82,21 +82,21 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="projects/p1/img/printer.jpg" alt="First slide" style="width:100%; max-height:600px; min-heigh:600px">
+            <img class="d-block w-100" src="https://picsum.photos/900/300/?image=628" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
               <h3>Lorem Ipsum</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://www.3m.com/wps/wcm/connect/484303a0-2dbc-457e-9f86-e25bfbcd55c9/Flexographic+Plate+Mounting+for+the+printing+industry_410x200.jpg?MOD=AJPERES&CACHEID=ROOTWORKSPACE-484303a0-2dbc-457e-9f86-e25bfbcd55c9-lVypk-R" alt="Second slide" style="width:100%; max-height:600px; min-height:600px">
-            <div class="carousel-caption d-none d-md-block" style="color:black">
+            <img class="d-block w-100" src="https://picsum.photos/900/300/?image=668" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
               <h3>Lorem Ipsum</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="projects/p1/img/ink.jpg" alt="Third slide" style="width:100%; max-height:600px; min-heigh:600px">
+            <img class="d-block w-100" src="https://picsum.photos/900/300/?image=802" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
               <h3>Lorem Ipsum</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus.</p>
