updated doSearch function

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -63,6 +63,9 @@
                 }).fail(function(err) {
                     throw err;
             });
+            
+            $("#search").hide();
+            $("#result").show();
         }
         
         function loadResponse(response){
