--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <meta charset="UTF-8">
-        <title>Title of the document</title>
+        <title>Lab 2</title>
     </head>
     
     
