--- a/projects/p6/index.html
+++ b/projects/p6/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <a href="https://react-pnguyen0222.c9users.io/reactjs/Ch02/02_01/start/index.html">React for Web Designers</a>
+    <a href="https://pn0222.github.io/react-for-web-designers/reactjs/Ch02/02_01/start/index.html">React for Web Designers</a>
 </body>
 
 </html>
