--- a/projects/p6/index.html
+++ b/projects/p6/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="refresh" content="0; URL='https://pn0222.github.io/react-for-web-designers/reactjs/Ch02/02_01/start/index.html'" />
 <meta charset="UTF-8">
 <title>React for web designers</title>
 </head>
