--- a/projects/p5/index.html
+++ b/projects/p5/index.html
@@ -9,6 +9,7 @@
         <video id="player" controls autoplay></video>
         <button id="capture">Capture</button>
         <canvas id="canvas" width=320 height=240></canvas>
+        <div id = "data"></div>
         
         
     </body>
@@ -56,6 +57,7 @@
                 data: requestBody
             }).done(function (data){
                 console.log(data);
+                $("data").text(data);
             });
         // }
     </script>
