fixed debugging issue

--- a/projects/p5/index.html
+++ b/projects/p5/index.html
@@ -58,7 +58,7 @@
                 data: requestBody
             }).done(function (data){
                 console.log(data);
-                $("data").text(data);
+                $("#data").text(data);
             });
         }
     </script>
