--- a/projects/p5/index.html
+++ b/projects/p5/index.html
@@ -94,7 +94,7 @@
                         // $("#alertLabel").text(response.responses[0].labelAnnotations[0].description);
                         
                         for(var x in response.responses[0].labelAnnotations){
-                            $("#alertLabel").append(" " + x.description.value());
+                            $("#alertLabel").append(<b>x.description</b>);
                         }
                     }
                 }
